# qt-material-widgets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
components/: CMakeLists.txt  qtmaterialappbar.cpp  qtmaterialappbar.h  qtmaterialappbar_p.h  qtmaterialautocomplete.cpp  qtmaterialautocomplete.h  qtmaterialautocomplete_internal.cpp  qtmaterialautocomplete_internal.h  qtmaterialautocomplete_p.h  qtmaterialavatar.cpp  qtmaterialavatar.h  qtmaterialavatar_p.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialbadge_p.h  qtmaterialcheckbox.cpp  qtmaterialcheckbox.h  qtmaterialcheckbox_p.h  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress.h  qtmaterialcircularprogress_internal.cpp  qtmaterialcircularprogress_internal.h  qtmaterialcircularprogress_p.h  qtmaterialdialog.cpp  qtmaterialdialog.h  qtmaterialdialog_internal.cpp  qtmaterialdialog_internal.h  qtmaterialdialog_p.h  qtmaterialdrawer.cpp  qtmaterialdrawer.h  qtmaterialdrawer_internal.cpp  qtmaterialdrawer_internal.h  qtmaterialdrawer_p.h  qtmaterialfab.cpp  qtmaterialfab.h  qtmaterialfab_p.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_internal.h  (+45 more)
examples/: CMakeLists.txt  appbarsettingseditor.cpp  appbarsettingseditor.h  appbarsettingsform.ui  autocompletesettingseditor.cpp  autocompletesettingseditor.h  avatarsettingseditor.cpp  avatarsettingseditor.h  avatarsettingsform.ui  badgesettingseditor.cpp  badgesettingseditor.h  badgesettingsform.ui  checkboxsettingseditor.cpp  checkboxsettingseditor.h  checkboxsettingsform.ui  dialogsettingseditor.h  (+46 more)
(+20 files in other folders)
